<resources>
    <string name="app_name">Communicare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque massa turpis, eleifend non blandit quis, vehicula et arcu. Donec at pretium turpis. Nunc lectus nisi, ultrices sed fringilla ac, imperdiet cursus purus. Maecenas venenatis eleifend enim eu dignissim. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus fermentum massa sed magna fringilla sagittis. Vestibulum lectus est, ultrices a eros lacinia, euismod finibus felis. Morbi felis risus, condimentum in sapien non, malesuada ultrices augue. Nunc fermentum sapien ac lectus elementum dapibus. Morbi tincidunt urna sit amet pellentesque lobortis. Nulla risus tellus, commodo aliquam tristique sit amet, dictum eget nisl.</string>
    <string name="welcome">Welcome, </string>
    <string name="intro">Select a category to record a video of yourself speaking in order to receive recommendations from us!</string>
    <string name="history">History</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="capture">Capture</string>
    <string name="back">Back</string>
    <string name="tips_upload">Tips for the page: \t- Tap anywhere in the video to replay  \t- Click button to upload your video \t- Please wait for see the result after click upload button</string>
    <string name="history_empty">Your history still empty</string>
    <string name="desc_history_empty">Start taking a video now to improve your communication skills!</string>
    <string name="one_way">One Way</string>
    <string name="two_way">Two Way</string>
    <string name="edit_image">Edit Image</string>
    <string name="upload_your_video">Upload your video</string>
    <string name="upload">Upload</string>
    <string name="hasil_analisa">Result Analyze</string>
    <string name="date">Date</string>
    <string name="face_expression">Face Expression</string>
    <string name="angry">Angry</string>
    <string name="fear">Fear</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="surprise">Surprise</string>
    <string name="sound_emotion_result">Sound Emotion Result</string>
    <string name="sound_emotion">Sound Emotion :</string>
    <string name="please_wait">Please wait… Approximately 1–2 minute</string>
    <string name="save_change">Save Change</string>
    <string name="image_link_jpg_png">Image Link (.jpg/.png)</string>
    <string name="are_you_sure">Are you sure to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="result">Result</string>
    <string name="this_is_a_description_of_the_image_result">This is a description of the image result</string>
    <string name="this_is_recommendation_sound">This is recommendation sound</string>
    <string name="go_to_home">Go to Home</string>
</resources>