<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.HomeFragment">

        <ImageView
            android:layout_width="600dp"
            android:layout_height="500dp"
            android:src="@drawable/circle"
            android:layout_marginTop="-200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/line_wave"
            android:layout_width="400dp"
            android:layout_height="500dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="464dp"
            android:rotation="98"
            android:src="@drawable/line_wave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_photo"
            android:src="@drawable/dummy_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/user_photo"
            app:layout_constraintEnd_toStartOf="@+id/user_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user_photo" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:textAlignment="center"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <ImageButton
            android:id="@+id/one_way_button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="227dp"
            android:background="@drawable/button_1_way_bg"
            android:scaleType="fitCenter"
            android:src="@drawable/video_1_way"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/two_way_button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="227dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/button_2_way_bg"
            android:scaleType="fitCenter"
            android:src="@drawable/video_2_way"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/way_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="1-Way"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="@+id/one_way_button"
            app:layout_constraintStart_toStartOf="@+id/one_way_button"
            app:layout_constraintTop_toBottomOf="@+id/one_way_button" />

        <TextView
            android:id="@+id/way_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="2-Way"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="@+id/two_way_button"
            app:layout_constraintStart_toStartOf="@+id/two_way_button"
            app:layout_constraintTop_toBottomOf="@+id/two_way_button" />

        <TextView
            android:id="@+id/label_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/history"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/way_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_history"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            app:layout_constraintTop_toBottomOf="@id/label_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_history_empty"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/label_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/img_history"
                    android:src="@drawable/ic_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

                <TextView
                    android:id="@+id/tv_history_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_empty"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_below="@id/img_history"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/tv_desc_history_empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_history_empty"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:layout_below="@id/tv_history_empty"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>